adding terraform files - not ready for deployment

--- a/public/404.html
+++ b/public/404.html
@@ -26,14 +26,14 @@
     
     
     <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Personal blog of Justin Hauer" />
+<meta property="og:description" content="Personal blog postings of Justin Hauer" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/404.html" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Personal blog of Justin Hauer"><meta name="twitter:card" content="summary"/>
+<meta itemprop="description" content="Personal blog postings of Justin Hauer"><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Personal blog of Justin Hauer"/>
+<meta name="twitter:description" content="Personal blog postings of Justin Hauer"/>
 
   </head>
 
