--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -33,7 +33,7 @@
 <meta itemprop="name" content="Contact">
 <meta itemprop="description" content="I&#39;d love to hear from you">
 
-<meta itemprop="wordCount" content="12">
+<meta itemprop="wordCount" content="8">
 
 
 
@@ -115,7 +115,7 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
-        <p>If you would like to contact me, please reach out on LinkedIn</p>
+        <p>Please reach out to Justin Hauer on LinkedIn</p>
 
       </div>
     </article>
